--- a/EveNeo/wwwroot/css/site.css
+++ b/EveNeo/wwwroot/css/site.css
@@ -1,37 +1,161 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
-for details on configuring this project to bundle and minify static web assets. */
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿* {
+    padding: 0;
+    margin: 0;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+@font-face {
+    font-family: 'eve_alpha';
+    src: url('../fonts/eve-webfont.woff2') format('woff2'), url('../fonts/eve-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
+html, body {
     width: 100%;
+    height: 100%;
 }
 
-/* QR code generator */
-#qrCode {
-    margin: 15px;
+#background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -10;
 }
 
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
+#content-grid {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+#content-row {
+    display: table-row;
+}
+
+/*** NeoCom ***/
+#neocom {
+    position: relative;
+    display: table-cell;
+    width: 2em;
+    background-image: linear-gradient(to right, #38564933 40%, #38564977 100%);
+}
+
+.neocom-item {
+    position: relative;
+    display: block;
+    height: 3em;
+    padding: 0.25em 0em;
+    transition: all .3s ease-in-out;
+}
+
+    .neocom-item:hover {
+        cursor: pointer;
     }
+
+    .neocom-item span.icon {
+        display: block;
+        width: 2.5em;
+        height: 2.5em;
+        margin: auto;
+        transition: all .2s ease-in-out;
+    }
+
+    .neocom-item span.overlay {
+        position: absolute;
+        display: block;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        transition: all .3s ease-in-out;
+    }
+
+    .neocom-item:hover span.overlay {
+        background: #fff2;
+    }
+
+#neocom-login {
+    width: 3em;
+    height: 1.8em;
+    padding: 0;
+}
+
+    #neocom-login span.icon {
+        width: 1.8em;
+        height: 1.8em;
+        background: url("../images/neocom/icons/neocom-login.png");
+        background-size: contain;
+    }
+
+#neocom-character {
+    padding: 0;
+}
+
+    #neocom-character span.icon {
+        width: 100%;
+        height: 100%;
+        background: url("../images/neocom/temp_portrait.jpg");
+        background-size: contain;
+    }
+
+#neocom-skillqueue {
+    height: 0.5em;
+    border: 1px solid #fff3;
+    box-sizing: border-box;
+    background: #0009;
+}
+
+    #neocom-skillqueue:hover {
+        border-color: #fff5;
+    }
+
+#neocom-market span.icon {
+    background: url("../images/neocom/icons/neocom-market.png");
+    background-size: contain;
+}
+
+#neocom-market:hover span.icon {
+    background: url("../images/neocom/icons/neocom-market-hover.png");
+    background-size: contain;
+}
+
+#neocom-agency span.icon {
+    background: url("../images/neocom/icons/neocom-agency.png");
+    background-size: contain;
+}
+
+#neocom-agency:hover span.icon {
+    background: url("../images/neocom/icons/neocom-agency-hover.png");
+    background-size: contain;
+}
+
+#gametime {
+    position: absolute;
+    bottom: 0;
+    padding: 0.25em 0em;
+    width: 100%;
+    font-family: 'Courier';
+    font-size: 11px;
+    text-align: center;
+    color: #ddd;
+    background: #000a;
+    transition: all .3s ease-in-out;
+}
+
+    #gametime:hover {
+        background: #333a;
+        cursor: pointer;
+    }
+
+    #gametime span {
+        vertical-align: sub;
+    }
+
+/*** Content ***/
+#content {
+    display: table-cell;
+    width: calc(100% - 2em);
 }
